fix button issues on smaller screens

--- a/style.css
+++ b/style.css
@@ -22,26 +22,28 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
+    
 }
 
 .btn-container {
-    position: absolute;
-    top: -3em;
-    
+    padding: 0.5em;
 }
 
 #btn {
     padding: 0.5em;
+    background-color: aliceblue;
+}
+
+#btn:hover {
+    cursor: pointer;
+    border: solid gold 0.5px;
+    background-color: white;
 }
 
 #board {
     display: flex;
     justify-content: flex-start;
-    align-items: center;
     flex-wrap: nowrap;
-    max-width: 70vw;
-    max-height: 70vh;
 }
 
 .row {
